# Self-Driving-and-ROS-2-Learn-by-Doing-Odometry-Control

./: .gitignore  README.md
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_controller/: package.xml
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: simple_controller.py
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_controller/config/: joy_teleop.yaml
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_tf_kinematics.hpp
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_tf_kinematics.cpp
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch.py
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_description/meshes/: caster_rear_link.STL
Section10_Probability_for_Robotics/bumperbot_ws/src/bumperbot_msgs/srv/: GetTransform.srv
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: noisy_controller.py
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_controller/config/: bumperbot_controllers.yaml
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_controller/include/bumperbot_controller/: noisy_controller.hpp
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_controller/launch/: controller.launch.py
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_localization/bumperbot_localization/: imu_republisher.py  kalman_filter.py
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_localization/include/bumperbot_localization/: kalman_filter.hpp
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_msgs/: CMakeLists.txt
Section11_Sensor_Fusion/bumperbot_ws/src/bumperbot_py_examples/: package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_bringup/: CMakeLists.txt  package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/: package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/config/: bumperbot_controllers.yaml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/src/: noisy_controller.cpp
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_description/: package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/: CMakeLists.txt  bumperbot_interface.xml  package.xml
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/robot_control/: robot_control.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/robot_control_inverted/: robot_control_inverted.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/simple_encoder_reader/: simple_encoder_reader.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/simple_motor_control/: simple_motor_control.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/include/bumperbot_firmware/: bumperbot_interface.hpp
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/launch/: hardware_interface.launch.py
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/src/: bumperbot_interface.cpp  simple_serial_receiver.cpp  simple_serial_transmitter.cpp
Section12_Build_the_Robot/bumperbot_ws/src/bumperbot_py_examples/: setup.py
Section3_Introduction_to_ROS_2/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
Section4_Locomotion/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Section4_Locomotion/bumperbot_ws/src/bumperbot_description/: package.xml
Section4_Locomotion/bumperbot_ws/src/bumperbot_py_examples/: setup.py
Section5_Control/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt
Section5_Control/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Section5_Control/bumperbot_ws/src/bumperbot_py_examples/: package.xml
Section6_Kinematics/bumperbot_ws/src/bumperbot_controller/: package.xml
Section6_Kinematics/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Section6_Kinematics/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section6_Kinematics/bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.cfg  setup.py
Section7_Differential_Kinematics/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section7_Differential_Kinematics/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
Section7_Differential_Kinematics/bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
Section8_TF2_Library/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section8_TF2_Library/bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
Section8_TF2_Library/bumperbot_ws/src/bumperbot_description/: package.xml
Section8_TF2_Library/bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
Section9_Odometry/bumperbot_ws/src/bumperbot_controller/: package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_description/: package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_msgs/: package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
(+63 files in other folders)
